--- a/index.html
+++ b/index.html
@@ -5,32 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jonas Augusto - Desenvolvedor Back-End & IA</title>
-  <!-- Tailwind CSS via CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!-- Lightbox2 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
-  <!-- Fonte Externa -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
       background-color: #111827;
-      /* bg-gray-900 */
       color: #f9fafb;
-      /* text-gray-50 */
     }
   </style>
 </head>
 
 <body class="bg-gray-900 text-white">
 
-  <!-- Header -->
   <header class="fixed top-0 left-0 right-0 bg-gray-800 shadow-md z-50 h-16 flex items-center px-4">
     <div class="max-w-6xl mx-auto w-full flex justify-between items-center">
       <h2 class="text-xl font-bold text-white mr-6">Jonas Augusto</h2>
-      <!-- Menu Desktop -->
       <ul class="hidden md:flex space-x-6">
         <li><a href="#sobre" class="hover:text-blue-400 text-gray-200">Sobre</a></li>
         <li><a href="#experiencia" class="hover:text-blue-400 text-gray-200">Experiência</a></li>
@@ -39,7 +31,6 @@
         <li><a href="#cursos" class="hover:text-blue-400 text-gray-200">Cursos</a></li> <!-- Novo link -->
         <li><a href="#contato" class="hover:text-blue-400 text-gray-200">Contato</a></li>
       </ul>
-      <!-- Menu Mobile (Hamburguer) -->
       <div class="md:hidden">
         <button id="mobile-menu-button" class="text-gray-200 focus:outline-none">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -48,7 +39,6 @@
         </button>
       </div>
     </div>
-    <!-- Menu Mobile (Dropdown) -->
     <div id="mobile-menu" class="md:hidden bg-gray-700 shadow-lg hidden absolute top-16 left-0 right-0">
       <ul class="flex flex-col p-4 space-y-4">
         <li><a href="#sobre" class="block hover:text-blue-400 text-gray-200">Sobre</a></li>
@@ -61,7 +51,6 @@
     </div>
   </header>
 
-  <!-- Hero -->
   <section id="hero"
     class="min-h-screen flex items-center justify-center bg-gradient-to-b from-gray-900 to-black text-white text-center pt-16">
     <div class="max-w-3xl px-4">
@@ -82,7 +71,6 @@
     </div>
   </section>
 
-  <!-- Sobre -->
   <section id="sobre" class="py-20 bg-gray-800" data-aos="fade-up">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8 text-white">Sobre Mim</h2>
@@ -98,7 +86,6 @@
     </div>
   </section>
 
-  <!-- Experiência -->
   <section id="experiencia" class="py-20 bg-gray-900" data-aos="fade-up">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-10 text-white">Experiência Profissional</h2>
@@ -135,7 +122,6 @@
     </div>
   </section>
 
-  <!-- Projetos -->
   <section id="projetos" class="py-20 bg-gray-800" data-aos="fade-up">
     <div class="max-w-6xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-10 text-white">Projetos Destacados</h2>
@@ -178,7 +164,6 @@
     </div>
   </section>
 
-  <!-- Habilidades -->
   <section id="habilidades" class="py-20 bg-gray-900" data-aos="fade-up">
     <div class="max-w-6xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-10 text-white">Habilidades Técnicas</h2>
@@ -207,7 +192,6 @@
     </div>
   </section>
 
-  <!-- Cursos & Certificações em Andamento -->
   <section id="cursos" class="py-20 bg-gray-800" data-aos="fade-up">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-10 text-white">Cursos & Certificações em Andamento</h2>
@@ -232,7 +216,6 @@
     </div>
   </section>
 
-  <!-- Contato -->
   <section id="contato" class="py-20 bg-gray-800 text-white" data-aos="fade-up">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
@@ -258,12 +241,10 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="bg-gray-900 text-gray-400 text-center py-6">
     <p>&copy; 2025 Jonas Augusto. Todos os direitos reservados.</p>
   </footer>
 
-  <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -271,17 +252,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script>
-    // Inicializações
     document.addEventListener("DOMContentLoaded", function () {
-      // AOS
       AOS.init();
 
-      // GSAP
+
       gsap.registerPlugin(ScrollTrigger);
       gsap.from("header", { y: -100, opacity: 0, duration: 1, ease: "power2.out" });
       gsap.from("#hero", { opacity: 0, duration: 1.5, ease: "power2.out" });
 
-      // Typed.js
       new Typed('#typed', {
         strings: ["Python", "C#", "Back-End", "IA", "Process Automation"],
         typeSpeed: 60,
@@ -289,26 +267,22 @@
         loop: true
       });
 
-      // EmailJS - Configuração Real para o Portfólio de Jonas Augusto (Simplificado)
-      document.getElementById('contact-form').addEventListener('submit', function (e) {
-        e.preventDefault(); // Impede o comportamento padrão de recarregar a página
 
+      document.getElementById('contact-form').addEventListener('submit', function (e) {
+        e.preventDefault();
+      
         const templateParams = {
-          user_name: this.user_name.value,      // O 'name' do campo input no HTML
-          user_email: this.user_email.value,    // O 'name' do campo input no HTML
-          message: this.message.value           // O 'name' do campo textarea no HTML
+          user_name: this.user_name.value,
+          user_email: this.user_email.value,
+          message: this.message.value
         };
 
-        // Envia o e-mail usando o Service ID, Template ID e Public Key configurados no EmailJS
-        // service_dvw390e -> ID do serviço Gmail conectado
-        // template_sl08jz5 -> ID do template criado no painel
-        // 'nsDdnPJNDAREkIPXo' -> Sua Public Key (encontrada em Account > General)
         emailjs.send('service_dvw390e', 'template_sl08jz5', templateParams, 'nsDdnPJNDAREkIPXo')
           .then(
             function (response) {
               console.log('SUCCESS!', response.status, response.text);
               alert('Mensagem enviada com sucesso! Entrarei em contato em breve.');
-              document.getElementById('contact-form').reset(); // Limpa os campos do formulário após o envio
+              document.getElementById('contact-form').reset();
             },
             function (error) {
               console.log('FAILED...', error);
@@ -317,10 +291,8 @@
           );
       });
 
-      // Menu Mobile
       const menuButton = document.getElementById('mobile-menu-button');
       const menu = document.getElementById('mobile-menu');
-
       if (menuButton && menu) {
         menuButton.addEventListener('click', function () {
           menu.classList.toggle('hidden');
