--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
       <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo ou me encontre nas redes:</p>
-      <form class="space-y-4" action="https://submit.formspark.io/1pIuu489V" method="POST">
+      <form class="space-y-4" action="https://submit-form.com/1pIuu489V" method="POST">
         <input type="text" name="name" placeholder="Nome" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <input type="email" name="email" placeholder="E-mail" required
