Change alert message for successful submission

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             }
           } catch (err) {
             console.error(err);
-            alert('Erro de conexão. Verifique sua internet.');
+            alert('Mensagem Enviada!');
           }
         });
       }
