--- a/index.html
+++ b/index.html
@@ -227,11 +227,8 @@
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <textarea name="message" placeholder="Mensagem" required
           class="w-full p-3 rounded bg-gray-700 text-white h-32"></textarea>
-        <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition">
-          <svg class="animate-spin -ml-1 mr-2 h-5 w-5 text-white hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
-          </svg>
+        <button type="submit"
+          class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition">
           Enviar Mensagem
         </button>
       </form>
@@ -247,7 +244,6 @@
     <p>&copy; 2025 Jonas Augusto. Todos os direitos reservados.</p>
   </footer>
 
-  <!-- Modal de Sucesso -->
   <div id="success-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
     <div class="bg-gray-800 rounded-lg p-6 max-w-md w-full mx-4 text-center shadow-2xl transform transition-all duration-300 scale-95 opacity-0">
       <div class="text-4xl mb-4">✅</div>
@@ -267,7 +263,80 @@
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
 
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      AOS.init();
+      gsap.registerPlugin(ScrollTrigger);
 
+      gsap.from("header", { y: -100, opacity: 0, duration: 1, ease: "power2.out" });
+      gsap.from("#hero", { opacity: 0, duration: 1.5, ease: "power2.out" });
+
+      new Typed('#typed', {
+        strings: ["Python", "C#", "Back-End", "IA", "Process Automation"],
+        typeSpeed: 60,
+        backSpeed: 30,
+        loop: true
+      });
+
+      const menuButton = document.getElementById('mobile-menu-button');
+      const menu = document.getElementById('mobile-menu');
+      if (menuButton && menu) {
+        menuButton.addEventListener('click', () => menu.classList.toggle('hidden'));
+      }
+
+      const contactForm = document.getElementById('contact-form');
+      const modal = document.getElementById('success-modal');
+      const closeModalBtn = document.getElementById('close-modal');
+
+      if (contactForm) {
+        contactForm.addEventListener('submit', async (e) => {
+          e.preventDefault();
+          const formData = new FormData(contactForm);
+          const data = Object.fromEntries(formData);
+
+          try {
+            const res = await fetch('https://submit-form.com/1pIuu489V', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify(data)
+            });
+
+            if (res.ok) {
+              contactForm.reset();
+
+              modal.classList.remove('hidden');
+              const content = modal.querySelector('div');
+              content.style.opacity = '0';
+              content.style.transform = 'scale(0.95)';
+              gsap.to(content, { opacity: 1, scale: 1, duration: 0.3, ease: "power2.out" });
+            } else {
+              alert('Ocorreu um erro. Tente novamente.');
+            }
+          } catch (err) {
+            console.error(err);
+            alert('Mensagem Enviada!');
+          }
+        });
+      }
+
+      if (closeModalBtn) {
+        closeModalBtn.addEventListener('click', () => {
+          const content = modal.querySelector('div');
+          gsap.to(content, {
+            opacity: 0,
+            scale: 0.95,
+            duration: 0.2,
+            ease: "power2.in",
+            onComplete: () => modal.classList.add('hidden')
+          });
+        });
+      }
+
+      modal?.addEventListener('click', (e) => {
+        if (e.target === modal) closeModalBtn?.click();
+      });
+    });
+  </script>
 </body>
 
 </html>
