--- a/index.html
+++ b/index.html
@@ -220,15 +220,19 @@
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
       <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo ou me encontre nas redes:</p>
-      <form id="contact-form" class="space-y-4">
+      <form id="contact-form" action="https://submit-form.com/1pIuu489V" method="POST" class="space-y-4">
         <input type="text" name="name" placeholder="Nome" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <input type="email" name="email" placeholder="E-mail" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <textarea name="message" placeholder="Mensagem" required
           class="w-full p-3 rounded bg-gray-700 text-white h-32"></textarea>
-        <button type="submit"
-          class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition">
+        <button type="submit" id="submit-btn"
+          class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition flex items-center justify-center">
+          <svg class="hidden animate-spin -ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
+          </svg>
           Enviar Mensagem
         </button>
       </form>
@@ -244,7 +248,6 @@
     <p>&copy; 2025 Jonas Augusto. Todos os direitos reservados.</p>
   </footer>
 
-  <!-- Modal de Sucesso -->
   <div id="success-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
     <div class="bg-gray-800 rounded-lg p-6 max-w-md w-full mx-4 text-center shadow-2xl">
       <div class="text-4xl mb-4">✅</div>
@@ -284,51 +287,48 @@
       if (menuButton && menu) {
         menuButton.addEventListener('click', () => menu.classList.toggle('hidden'));
       }
+
       const contactForm = document.getElementById('contact-form');
+      const submitBtn = document.getElementById('submit-btn');
+      const spinner = submitBtn.querySelector('svg');
       const modal = document.getElementById('success-modal');
       const closeModalBtn = document.getElementById('close-modal');
-      const submitButton = contactForm.querySelector('button[type="submit"]');
 
-      let isSubmitting = false;
+      if (contactForm && submitBtn && spinner && modal && closeModalBtn) {
+        contactForm.addEventListener('submit', (e) => {
+          submitBtn.disabled = true;
+          spinner.classList.remove('hidden');
+          submitBtn.innerHTML = `
+            <svg class="animate-spin -ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+              <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+              <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
+            </svg>
+            Enviando...
+          `;
 
-      if (contactForm && submitButton && modal && closeModalBtn) {
-        contactForm.addEventListener('submit', async (e) => {
-          e.preventDefault();
+          setTimeout(() => {
+            submitBtn.disabled = false;
+            submitBtn.innerHTML = `
+              <svg class="hidden animate-spin -ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
+              </svg>
+              Enviar Mensagem
+            `;
+          }, 2000);
 
-          if (isSubmitting) return;
-          isSubmitting = true;
-          submitButton.disabled = true;
-          submitButton.classList.add('opacity-75', 'cursor-not-allowed');
-
-          const formData = new FormData(contactForm);
-
-          try {
-            const res = await fetch('https://submit-form.com/1pIuu489V', {
-              method: 'POST',
-              body: formData
-            });
-
-            if (res.ok || res.redirected) {
-              contactForm.reset();
-
-              modal.classList.remove('hidden');
-              const content = modal.querySelector('.bg-gray-800');
-              if (content) {
-                gsap.set(content, { scale: 0.9, opacity: 0 });
-                gsap.to(content, { scale: 1, opacity: 1, duration: 0.3, ease: "power2.out" });
-              }
-            } else {
-              console.error('Erro no envio:', res.status);
+          setTimeout(() => {
+            modal.classList.remove('hidden');
+            const content = modal.querySelector('.bg-gray-800');
+            if (content) {
+              gsap.set(content, { scale: 0.9, opacity: 0 });
+              gsap.to(content, { scale: 1, opacity: 1, duration: 0.3, ease: "power2.out" });
             }
-          } catch (err) {
-            console.error('Erro de rede:', err);
-          } finally {
-            isSubmitting = false;
-            submitButton.disabled = false;
-            submitButton.classList.remove('opacity-75', 'cursor-not-allowed');
-          }
+          }, 500);
         });
+      }
 
+      if (closeModalBtn && modal) {
         closeModalBtn.addEventListener('click', () => {
           const content = modal.querySelector('.bg-gray-800');
           if (content) {
