--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
       <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo ou me encontre nas redes:</p>
-      <form id="contact-form" action="https://submit-form.com/1pIuu489V" method="POST" class="space-y-4">
+      <form id="contact-form" class="space-y-4">
         <input type="text" name="name" placeholder="Nome" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <input type="email" name="email" placeholder="E-mail" required
@@ -295,7 +295,9 @@
       const closeModalBtn = document.getElementById('close-modal');
 
       if (contactForm && submitBtn && spinner && modal && closeModalBtn) {
-        contactForm.addEventListener('submit', (e) => {
+        contactForm.addEventListener('submit', async (e) => {
+          e.preventDefault();
+
           submitBtn.disabled = true;
           spinner.classList.remove('hidden');
           submitBtn.innerHTML = `
@@ -306,25 +308,40 @@
             Enviando...
           `;
 
-          setTimeout(() => {
-            submitBtn.disabled = false;
-            submitBtn.innerHTML = `
-              <svg class="hidden animate-spin -ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
-              </svg>
-              Enviar Mensagem
-            `;
-          }, 2000);
+          const formData = new FormData(contactForm);
 
-          setTimeout(() => {
-            modal.classList.remove('hidden');
-            const content = modal.querySelector('.bg-gray-800');
-            if (content) {
-              gsap.set(content, { scale: 0.9, opacity: 0 });
-              gsap.to(content, { scale: 1, opacity: 1, duration: 0.3, ease: "power2.out" });
+          try {
+            const res = await fetch('https://submit-form.com/1pIuu489V', {
+              method: 'POST',
+              body: formData
+            });
+
+            if (res.ok || res.redirected) {
+              contactForm.reset();
+
+              modal.classList.remove('hidden');
+              const content = modal.querySelector('.bg-gray-800');
+              if (content) {
+                gsap.set(content, { scale: 0.9, opacity: 0 });
+                gsap.to(content, { scale: 1, opacity: 1, duration: 0.3, ease: "power2.out" });
+              }
+            } else {
+              console.error('Erro no envio:', res.status);
             }
-          }, 500);
+          } catch (err) {
+            console.error('Erro de rede:', err);
+          } finally {
+            setTimeout(() => {
+              submitBtn.disabled = false;
+              submitBtn.innerHTML = `
+                <svg class="hidden animate-spin -ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                  <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                  <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
+                </svg>
+                Enviar Mensagem
+              `;
+            }, 2000);
+          }
         });
       }
 
