--- a/index.html
+++ b/index.html
@@ -220,20 +220,27 @@
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8">Contato</h2>
       <p class="text-center mb-6 text-gray-200">Preencha o formulário abaixo ou me encontre nas redes:</p>
-      <form id="contact-form" class="space-y-4">
+      <form id="contact-form" action="https://submit-form.com/1pIuu489V" method="POST" class="space-y-4">
         <input type="text" name="name" placeholder="Nome" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <input type="email" name="email" placeholder="E-mail" required
           class="w-full p-3 rounded bg-gray-700 text-white" />
         <textarea name="message" placeholder="Mensagem" required
           class="w-full p-3 rounded bg-gray-700 text-white h-32"></textarea>
+        <!-- Campos para personalizar a página de feedback -->
+        <input type="hidden" name="_feedback.whitelabel" value="true" />
+        <input type="hidden" name="_feedback.dark" value="true" />
+        <input type="hidden" name="_feedback.success.title" value="Mensagem enviada!" />
+        <input type="hidden" name="_feedback.success.message" value="Obrigado pelo contato. Responderei em breve!" />
+        <input type="hidden" name="_feedback.error.title" value="Ops, ocorreu um erro!" />
+        <input type="hidden" name="_feedback.error.message" value="Por favor, tente novamente." />
         <button type="submit" id="submit-btn"
           class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition flex items-center justify-center">
           <svg class="hidden animate-spin -ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
             <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
             <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
           </svg>
-          Enviar Mensagem
+          Enviar
         </button>
       </form>
       <div class="flex justify-center space-x-6 mt-8">
@@ -247,19 +254,6 @@
   <footer class="bg-gray-900 text-gray-400 text-center py-6">
     <p>&copy; 2025 Jonas Augusto. Todos os direitos reservados.</p>
   </footer>
-
-  <div id="success-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
-    <div class="bg-gray-800 rounded-lg p-6 max-w-md w-full mx-4 text-center shadow-2xl transform transition-all duration-300 scale-95 opacity-0">
-      <div class="text-4xl mb-4">✅</div>
-      <h3 class="text-xl font-bold text-blue-400 mb-2">Mensagem enviada!</h3>
-      <p class="text-gray-200 mb-4">
-        Obrigado pelo contato. Responderei em breve!
-      </p>
-      <button id="close-modal" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition">
-        Fechar
-      </button>
-    </div>
-  </div>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -289,64 +283,23 @@
       }
 
       const contactForm = document.getElementById('contact-form');
-      const modal = document.getElementById('success-modal');
-      const closeModalBtn = document.getElementById('close-modal');
       const submitBtn = document.getElementById('submit-btn');
       const spinner = submitBtn.querySelector('svg');
 
       if (contactForm) {
-        contactForm.addEventListener('submit', async (e) => {
-          e.preventDefault();
-
+        contactForm.addEventListener('submit', (e) => {
+          // Mostrar spinner e desabilitar botão
           submitBtn.disabled = true;
           spinner.classList.remove('hidden');
-
-          const formData = new FormData(contactForm);
-
-          try {
-            const res = await fetch('https://submit-form.com/1pIuu489V', {
-              method: 'POST',
-              body: formData 
-            });
-
-            contactForm.reset();
-            modal.classList.remove('hidden');
-            const content = modal.querySelector('div');
-            content.style.opacity = '0';
-            content.style.transform = 'scale(0.95)';
-            gsap.to(content, { opacity: 1, scale: 1, duration: 0.3, ease: "power2.out" });
-
-          } catch (err) {
-            console.error('Erro de rede ou envio falhou:', err);
-            contactForm.reset();
-            modal.classList.remove('hidden');
-            const content = modal.querySelector('div');
-            content.style.opacity = '0';
-            content.style.transform = 'scale(0.95)';
-            gsap.to(content, { opacity: 1, scale: 1, duration: 0.3, ease: "power2.out" });
-          } finally {
-             submitBtn.disabled = false;
-             spinner.classList.add('hidden');
-          }
+          submitBtn.innerHTML = `
+            <svg class="animate-spin -ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+              <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+              <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V6a6 6 0 616 6h2a6 6 0 016 6v2a6 6 0 01-6 6H6a6 6 0 01-6-6v-2z"></path>
+            </svg>
+            Enviando...
+          `;
         });
       }
-
-      if (closeModalBtn) {
-        closeModalBtn.addEventListener('click', () => {
-          const content = modal.querySelector('div');
-          gsap.to(content, {
-            opacity: 0,
-            scale: 0.95,
-            duration: 0.2,
-            ease: "power2.in",
-            onComplete: () => modal.classList.add('hidden')
-          });
-        });
-      }
-
-      modal?.addEventListener('click', (e) => {
-        if (e.target === modal) closeModalBtn?.click();
-      });
     });
   </script>
 </body>
